# Timer

./: .gitignore  README.md  pyproject.toml  timer.py  timer_settings.json
qt_timer/: config.toml  pyproject.toml  timer.py  timer.pyw  worklog(blank).db
