[tool.poetry]
name = "timer"
version = "0.1.0"
description = "My first project in Python, which I still use to track time worked in different projects."
authors = ["David A"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
